--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
@@ -169,6 +169,7 @@
           </ul>
         </div>
       </section>
+
       <!-- чим займаються -->
       <section class="section work">
         <div class="conteiner">
@@ -360,7 +361,7 @@
             </li>
             <li class="partner__item">
               <a class="partner__link" href="" aria-label="">
-                <svg class="partner__icon" width="" height="">
+                <svg class="partner__icon">
                   <use href="./images/icon/icons.svg#icon-group2"></use>
                 </svg>
               </a>
@@ -482,5 +483,6 @@
       </div>
     </footer>
     <script src="./modal.js"></script>
+    <!-- <script src="./mobile-menu.js"></script> -->
   </body>
 </html>
