--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
                     srcset="./images/port1-s.jpg 1x, ./images/port1-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port1-s.jpg " alt="Технокряк" />
+                  <img src="./images/port1-s.jpg " alt="Технокряк" width="450" height="294" />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -145,7 +145,12 @@
                     srcset="./images/port2-s.jpg 1x, ./images/port2-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port2-s.jpg " alt="Постер New Orlean vs Golden Star" />
+                  <img
+                    src="./images/port2-s.jpg "
+                    alt="Постер New Orlean vs Golden Star"
+                    width="450"
+                    height="294"
+                  />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -187,7 +192,12 @@
                     srcset="./images/port3-s.jpg 1x, ./images/port3-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port3-s.jpg " alt="Ресторан Seafood" />
+                  <img
+                    src="./images/port3-s.jpg "
+                    alt="Ресторан Seafood"
+                    width="450"
+                    height="294"
+                  />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -229,7 +239,7 @@
                     srcset="./images/port4-s.jpg 1x, ./images/port4-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port4-s.jpg " alt="Проект Prime" />
+                  <img src="./images/port4-s.jpg " alt="Проект Prime" width="450" height="294" />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -271,7 +281,7 @@
                     srcset="./images/port5-s.jpg 1x, ./images/port5-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port5-s.jpg " alt="Проект Boxes" />
+                  <img src="./images/port5-s.jpg " alt="Проект Boxes" width="450" height="294" />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -313,7 +323,12 @@
                     srcset="./images/port6-s.jpg 1x, ./images/port6-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port6-s.jpg " alt="Inspiration has no Borders" />
+                  <img
+                    src="./images/port6-s.jpg "
+                    alt="Inspiration has no Borders"
+                    width="450"
+                    height="294"
+                  />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -355,7 +370,12 @@
                     srcset="./images/port7-s.jpg 1x, ./images/port7-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port7-s.jpg " alt="Издание Limited Edition" />
+                  <img
+                    src="./images/port7-s.jpg "
+                    alt="Издание Limited Edition"
+                    width="450"
+                    height="294"
+                  />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -397,7 +417,7 @@
                     srcset="./images/port8-s.jpg 1x, ./images/port8-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port8-s.jpg " alt="Проект LAB" />
+                  <img src="./images/port8-s.jpg " alt="Проект LAB" width="450" height="294" />
                 </picture>
                 <div class="template__card__text">
                   <p>
@@ -439,7 +459,12 @@
                     srcset="./images/port9-s.jpg 1x, ./images/port9-s@2x.jpg 2x"
                     type="image/jpg"
                   />
-                  <img src="./images/port9-s.jpg " alt="Growing Business" />
+                  <img
+                    src="./images/port9-s.jpg "
+                    alt="Growing Business"
+                    width="450"
+                    height="294"
+                  />
                 </picture>
                 <div class="template__card__text">
                   <p>
