--- a/portfolio.html
+++ b/portfolio.html
@@ -485,142 +485,143 @@
     </main>
     <!-- підвал -->
     <footer>
-      <div class="conteiner conteiner-footer">
-        <div class="footer__item">
-          <div class="logo-footer">
-            <a href="./index.html" class="logo"> Web<span class="studio__white">Studio</span> </a>
-          </div>
-          <address>
-            <ul class="footer__contact list">
-              <li class="footer__contact__link">
-                <a
-                  href="https://goo.gl/maps/hsA7HbgkKuzWEhCt6"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="footer__contact__maps"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-              </li>
-              <li class="footer__contact__link">
-                <a href="Mailto:info@devstudio.com" class="footer__contact__items"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="footer__contact__link">
-                <a href="tel:+380961111111" class="footer__contact__items">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
-        <!-- subscribe -->
-
-        <div class="footer__item">
-          <h3 class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</h3>
-          <ul class="social">
-            <li>
-              <a class="social__link" href="" target="_blank" aria-label="Instagram">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icon/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social__link" href="" target="_blank" aria-label="Twitter">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icon/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social__link" href="" target="_blank" aria-label="Facebook">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icon/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social__link" href="" target="_blank" aria-label="Linkedin">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icon/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- подпешитесь -->
-        <div class="footer-item form-sub">
-          <label>
-            <h3 class="footer__title">Подпишитесь на рассылку</h3>
-            <div class="form-email">
-              <input type="email" name="email" placeholder="E-mail" />
-
-              <span class="footer-btn-icon">
-                <button class="foot-modal-wrap" type="submit">
-                  <span class="sub"> Подписаться</span>
-                  <svg class="foot-modal-icon" width="24" height="24">
-                    <use href="./images/icon/icons.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </span>
+      <section class="footer-section">
+        <div class="conteiner conteiner-footer">
+          <div class="footer__item">
+            <div class="logo-footer">
+              <a href="./index.html" class="logo"> Web<span class="studio__white">Studio</span> </a>
             </div>
-          </label>
-        </div>
-      </div>
-      <!-- mobile menu -->
-      <div class="mobile-menu" data-menu>
-        <div class="mobile-menu__container">
-          <ul class="mobile-menu__nav list">
-            <li class="mobile-menu__item">
-              <a href="./index.html" class="mobile-menu__link link">Студия</a>
-            </li>
-            <li class="mobile-menu__item">
-              <a href="./portfolio.html" class="mobile-menu__link mobile-menu__link--current link"
-                >Портфолио</a
-              >
-            </li>
-            <li class="mobile-menu__item">
-              <a href="" class="mobile-menu__link link">Контакты</a>
-            </li>
-          </ul>
+            <address>
+              <ul class="footer__contact list">
+                <li class="footer__contact__link">
+                  <a
+                    href="https://goo.gl/maps/hsA7HbgkKuzWEhCt6"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="footer__contact__maps"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="footer__contact__link">
+                  <a href="Mailto:info@devstudio.com" class="footer__contact__items"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer__contact__link">
+                  <a href="tel:+380961111111" class="footer__contact__items">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <!-- subscribe -->
 
-          <ul class="mobile-contact list">
-            <li class="mobile-contact__item">
-              <a href="mailto:info@devstudio.com" class="mobile-contact__email link">
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="mobile-contact__item">
-              <a href="tel:+380961111111" class="mobile-contact__tel link"> +38 096 111 11 11</a>
-            </li>
-          </ul>
-          <div class="mobile-social">
-            <ul class="mobile-social__list list">
+          <div class="footer__item">
+            <h3 class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+            <ul class="social">
               <li>
-                <a class="mobile-social__link link" href="" target="_blank" aria-label="Instagram"
-                  >Instagram <span class="line"> </span>
+                <a class="social__link" href="" target="_blank" aria-label="Instagram">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icon/icons.svg#icon-instagram"></use>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a class="mobile-social__link link" href="" target="_blank" aria-label="Twitter"
-                  >Twitter<span class="line"> </span>
+                <a class="social__link" href="" target="_blank" aria-label="Twitter">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icon/icons.svg#icon-twitter"></use>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a class="mobile-social__link link" href="" target="_blank" aria-label="Facebook"
-                  >Facebook<span class="line"> </span>
+                <a class="social__link" href="" target="_blank" aria-label="Facebook">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icon/icons.svg#icon-facebook"></use>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a class="mobile-social__link link" href="" target="_blank" aria-label="Linkedin"
-                  >Linkedin
+                <a class="social__link" href="" target="_blank" aria-label="Linkedin">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icon/icons.svg#icon-linkedin"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
           </div>
-        </div>
-      </div>
 
+          <!-- подпешитесь -->
+          <div class="footer-item form-sub">
+            <label>
+              <h3 class="footer__title">Подпишитесь на рассылку</h3>
+              <div class="form-email">
+                <input type="email" name="email" placeholder="E-mail" />
+
+                <span class="footer-btn-icon">
+                  <button class="foot-modal-wrap" type="submit">
+                    <span class="sub"> Подписаться</span>
+                    <svg class="foot-modal-icon" width="24" height="24">
+                      <use href="./images/icon/icons.svg#icon-send"></use>
+                    </svg>
+                  </button>
+                </span>
+              </div>
+            </label>
+          </div>
+        </div>
+        <!-- mobile menu -->
+        <div class="mobile-menu" data-menu>
+          <div class="mobile-menu__container">
+            <ul class="mobile-menu__nav list">
+              <li class="mobile-menu__item">
+                <a href="./index.html" class="mobile-menu__link link">Студия</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="./portfolio.html" class="mobile-menu__link mobile-menu__link--current link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mobile-menu__item">
+                <a href="" class="mobile-menu__link link">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="mobile-contact list">
+              <li class="mobile-contact__item">
+                <a href="mailto:info@devstudio.com" class="mobile-contact__email link">
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-contact__item">
+                <a href="tel:+380961111111" class="mobile-contact__tel link"> +38 096 111 11 11</a>
+              </li>
+            </ul>
+            <div class="mobile-social">
+              <ul class="mobile-social__list list">
+                <li>
+                  <a class="mobile-social__link link" href="" target="_blank" aria-label="Instagram"
+                    >Instagram <span class="line"> </span>
+                  </a>
+                </li>
+                <li>
+                  <a class="mobile-social__link link" href="" target="_blank" aria-label="Twitter"
+                    >Twitter<span class="line"> </span>
+                  </a>
+                </li>
+                <li>
+                  <a class="mobile-social__link link" href="" target="_blank" aria-label="Facebook"
+                    >Facebook<span class="line"> </span>
+                  </a>
+                </li>
+                <li>
+                  <a class="mobile-social__link link" href="" target="_blank" aria-label="Linkedin"
+                    >Linkedin
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./mobile-menu.js"></script>
     </footer>
   </body>
